--- a/auth/package.json
+++ b/auth/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ticketingdotcom/common": "^1.0.4",
     "@types/cookie-session": "^2.0.46",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
