--- a/orders/package.json
+++ b/orders/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ticketingdotcom/common": "^1.0.26",
+    "@ticketingdotcom/common": "^1.0.27",
     "@types/cookie-session": "^2.0.46",
     "@types/express": "^4.17.20",
     "@types/jsonwebtoken": "^9.0.4",
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
